tests/spec/compile-fail/082_scoped_allocator_owner_return.zn
// category: compile-fail
// profile: hosted
// purpose: owners allocated from scoped allocators cannot outlive the allocator

module tests.fail.scopedAllocatorOwnerReturn;

fn bad(mut arena: ArenaAllocator) -> Vector<U8> {
    return Vector<U8>.withCapacityIn(1024, mut arena); // expected-error: scoped allocation escapes allocator
}

